fix for scrollbar issue

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -106,7 +106,7 @@ header {
   margin-top:8px;
   padding:0;
   font-family:Helvetica, Arial;
-  overflow-y:scroll;
+  overflow-y:auto;
   max-height:538px;
 }
 .accordion {
@@ -117,7 +117,7 @@ header {
   position:relative;
   &.expand {
     max-height:548px;
-    overflow-y:scroll;
+    overflow-y:auto;
   }
   .search {
     width: 100%;
